v0.2 - added jdbc and h2 database. Added exception handling and database integrity checker via AOP in Spring Framework